# word-jam

./: .gitignore  .travis.yml  README.md  README.rst  buildozer.spec  main.py  main.spec  nuitka-dependencies.py  nuitka-optimise.py  pyinstaller.spec  pyproject.toml  snippet
.github/workflows/: pythonapp.yml
.travis/: install.sh
des/: Finished Level Template.xlsx  Resource Blueprints.pptx  Table Blueprints.xlsx  lvl-builder.py
lvl/: 1.csv  1_hint.csv  2.csv  3.csv  4.csv  sample.csv  template.xlsx
res/: src.pptx
src/: __init__.py  __main__.py  common.py  config.ini  config.py  grid.py  layout.kv  monitor.py  save.py  setup.sql  test.py  wordjam.kv
tests/: test_word_jam.py
word_jam/: __main__.py
