[tool.poetry]
name = "src"
version = "0.1.0"
description = "A crossword game which you can play during your free time"
authors = ["AshBlade <jeenamurali100tab@gmail.com>"]
readme = 'README.md'
homepage = "https://github.com/synccodes/word-jam"
repository = "https://github.com/synccodes/word-jam"

[tool.poetry.dependencies]
python = "^3.6"
pypiwin32 = { platform = "win32", version = "^223" }
docutils = "^0.15.2"
pygments = "^2.5.2"
"kivy_deps.sdl2" = { platform = "win32", version = "^0.2.0" }
"kivy_deps.glew" = { platform = "win32", version = "^0.2.0" }
pillow = "^7.0.0"
pygame = "^1.9.6"
pyinstaller = "^3.6"
colorama = "^0.4.3"
mypy = "^0.761"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
